tests/fixtures/fail/borrow_value_copy_mut.sali
let inspect(copy value: mut borrow i32): i32 = value
let main(): i32 = 42
